# aegis

./: Anchor.toml  Cargo.toml  LICENSE  README.md  fix-program-ids.sh
.devcontainer/: devcontainer.json  setup.sh
app/: package-lock.json  package.json
app/src/app/: layout.tsx  page.tsx
app/src/components/: ConnectWallet.tsx  StakingPanel.tsx  index.ts
app/src/contexts/: WalletProvider.tsx
app/src/lib/: anchor.ts  staking.ts
config/: token.json
docs/: DEPLOYMENT.md  architecture.md
programs/aegis/: Cargo.toml
programs/aegis/src/: lib.rs
programs/fee-distributor/: Cargo.toml
programs/fee-distributor/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
scripts/: init-pool.ts  init-testnet-pool.ts  package-lock.json  package.json  rewards-vault-keypair.json
tests/: aegis.ts
