[package]
name = "fee-distributor"
version = "0.1.0"
description = "AEGIS fee distribution program - harvests and distributes transfer fees"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_distributor"

[features]
default = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
