[package]
name = "staking"
version = "0.1.0"
description = "AEGIS staking program - stake tokens to earn fee rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = "3.0"
